feat: add search by name
